themes/harassmap/assets/scss/modules/_buttons.scss
@import "../variables";
@import "rem";

.btn {
  background-color: $white;
  border: 1px solid $green;
  cursor: pointer;
  color: $green;
  text-align: center;
  text-transform: uppercase;

  @include oswald();
  @include rem((padding: 8px 50px, letter-spacing: 1px));
}

.btn-block {
  @include rem((padding: 8px 0));
}

.btn--default {

  &:hover {
    color: $black;
    background-color: $light-gray;
  }

}

.btn--wrap {
  white-space: normal;
}

.btn--inverse {
  background-color: $tundora;
  border: 1px solid $tundora;
  color: $white;

  &.active {
    background-color: $white;
    border: 1px solid $green;
    color: $dusty-gray;
  }
}

.btn--large {
  @include rem((font-size: 20px, margin: 0 0 30px, padding: 18px));
}

.btn--red {
  background-color: $red;
  border: none;
  color: $white;
}

.btn--white {
  background-color: $white;
  border: 1px solid $tundora;
  color: $tundora;

  &:hover, &.active {
    background-color: $red;
    color: $white;
  }
}

.btn--hover-green {
  &:hover, &.active {
    background-color: $green;
    color: $white;
  }
}

.btn--green {
  background-color: $green;
  border: none;
  color: $white;
}

.btn--fullscreen {
  background: url('/themes/harassmap/assets/img/map/full-screen.svg') no-repeat center center $tundora;
  background-size: 100% 100%;
  border: 1px solid $tundora;

  @include rem((padding: 8px 0, width: 35px));
}

.share__conatiner {
  float: right;

  .ar & {
    float: left;
  }
}

.share {
  background-size: auto 100%;
  background-position: center left;
  background-repeat: no-repeat;

  @include rem((padding: 8px 20px 8px 60px));

  &.share--facebook {
    background-image: url('/themes/harassmap/assets/img/support/facebook.svg');
  }

  &.share--twitter {
    background-image: url('/themes/harassmap/assets/img/support/twitter.svg');
  }

  &.share--icon {
    @include rem((margin: 15px 0, padding: 0, height: 40px, width: 40px));
  }
}

